# modest

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog2  HACKING  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  modest.git  remove-wimax-against-4240.patch  remove-wimax.patch
debian/: menu  (+21 more)
docs/reference/: Makefile.am  modest-architecture.sgml  modest-coding-guidelines.sgml  modest-design.sgml  modest-docs.sgml  modest-preface.sgml  modest-sections.txt
experimental/modest/: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
libmodest-dbus-client/: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  libmodest-dbus-client-1.0.pc.in  libmodest-dbus-client.c  libmodest-dbus-client.h  moving-to-libmodest-dbus-client.txt
libmodest-dbus-client/debian/: changelog  control  control.maemo-chinook  control.maemo-diablo  control.maemo-fremantle  control.maemo-leste  copyright  libmodest-dbus-client-dev.install.dh10  libmodest-dbus-client-dev.install.dh4  rules
libmodest-dbus-client/src/: Makefile.am  README  libmodest-dbus-api.h  libmodest-dbus-client-1.0.pc.in  libmodest-dbus-client.c  libmodest-dbus-client.h
src/: Makefile.am  TODO  export.map  marshall.list  mcc_mapping  modest-account-keys.h  modest-account-mgr-helpers.c  modest-account-mgr-helpers.h  modest-account-mgr-priv.c  modest-account-mgr-priv.h  modest-account-mgr.c  modest-account-mgr.h  modest-account-protocol.c  modest-account-protocol.h  modest-account-settings.c  modest-account-settings.h  modest-account-view.c  modest-account-view.h  modest-address-book-dummy.c  modest-address-book.h  modest-cache-mgr.c  modest-cache-mgr.h  modest-conf-gconf.c  modest-conf-keys.h  modest-conf.c  modest-conf.h  modest-count-stream.c  modest-count-stream.h  modest-datetime-formatter.c  modest-datetime-formatter.h  modest-debug.c  modest-debug.h  modest-default-connection-policy.c  modest-default-connection-policy.h  modest-defs.c  modest-defs.h  modest-dimming-rule.c  modest-dimming-rule.h  modest-dimming-rules-group-priv.h  modest-dimming-rules-group.c  (+128 more)
src/dbus_api/: Makefile.am  asdbus.c  asdbus.h  modest-dbus-api.h  modest-dbus-callbacks.c  modest-dbus-callbacks.h
src/gnome/: Makefile.am  modest-account-assistant.c  modest-account-assistant.h  modest-account-settings-dialog.c  modest-account-view-window.c  modest-address-book.c  modest-default-account-settings-dialog.c  modest-gnome-global-settings-dialog.c  modest-gnome-global-settings-dialog.h  modest-gnome-info-bar.c  modest-gnome-info-bar.h  modest-gnome-sort-dialog.c  modest-gnome-sort-dialog.h  modest-gnome-utils.c  modest-gnome-utils.h  modest-icon-names.h  modest-main-window-ui-dimming.h  modest-main-window-ui.h  modest-main-window.c  modest-msg-edit-window.c  modest-msg-view-window-ui-dimming.h  modest-msg-view-window.c  modest-platform.c  modest-store-widget.c  modest-store-widget.h  modest-transport-widget.c  modest-transport-widget.h
src/gtk/: Makefile.am  modest-account-assistant.c  modest-account-assistant.h  modest-account-view-window.c  modest-account-view-window.h  modest-edit-msg-window.c  modest-edit-msg-window.h  modest-gtk-window-mgr.c  modest-gtk-window-mgr.h  modest-icon-names.h  modest-main-window-ui.h  modest-main-window.c  modest-main-window.h  modest-msg-edit-window.c  modest-msg-view-window.c  modest-platform.c  modest-shell-banner.c  modest-shell-banner.h  modest-shell-window.c  modest-shell-window.h  modest-shell.c  modest-shell.h  modest-store-widget.c  modest-store-widget.h  modest-transport-widget.c  modest-transport-widget.h  modest-ui-account-setup.c  modest-ui-account-setup.h  modest-ui-glade.h  modest-ui-main-view.c  modest-ui-message-editor.c  modest-ui-message-editor.h  modest-ui-message-viewer.c  modest-ui-wizard.c  modest-ui-wizard.h  modest-ui.c  modest.desktop
src/gtk-glade/: Makefile.am  modest-icon-names.h  modest-ui-account-setup.c  modest-ui-account-setup.h  modest-ui-glade.h  modest-ui-main-view.c  modest-ui-message-editor.c  modest-ui-message-editor.h  modest-ui-message-viewer.c  modest-ui-message-viewer.h  modest-ui-wizard.c  modest-ui-wizard.h  modest-ui-wizzard.c  modest-ui.c  modest.glade  modest.glade.h  modest.gladep
src/gtk2/: Makefile.am  modest-account-assistant.c  modest-account-assistant.h  modest-account-view-window.c  modest-account-view-window.h  modest-account-wizard.c  modest-account-wizard.h  modest-edit-msg-window.c  modest-edit-msg-window.h  modest-icon-names.h  modest-main-window.c  modest-main-window.h  modest-msg-window.c  modest-msg-window.h  modest-store-widget.c  modest-store-widget.h  modest-transport-widget.c  modest-ui.c
src/hildon/: Makefile.am  com.nokia.modest.service.in  modest-icon-names.h  modest-ui-account-setup.c  modest-ui-account-setup.h  modest-ui-glade.h  modest-ui-main-view.c  modest-ui-message-editor.c  modest-ui-message-editor.h  modest-ui-message-viewer.c  modest-ui-message-viewer.h  modest-ui-wizard.c  modest-ui-wizard.h  modest-ui.c  modest.desktop.in.in  modest.glade  modest.sh
src/hildon2/: Makefile.am  asdbus-bindings.h  asdbus.c  asdbus.h  com.nokia.modest.service.in  mcc_mapping  mcc_mapping.en_GB  modest-account-view-window.c  modest-accounts-window.c  modest-accounts-window.h  modest-address-book.c  modest-clean.sh  modest-color-button.c  modest-color-button.h  modest-connection-specific-smtp-edit-window.c  modest-connection-specific-smtp-window.c  modest-country-picker.c  modest-country-picker.h  modest-default-account-settings-dialog.c  modest-easysetup-country-combo-box.c  modest-easysetup-provider-combo-box.c  modest-easysetup-servertype-combo-box.c  modest-easysetup-wizard-dialog.c  modest-easysetup-wizard-dialog.h  modest-folder-window.c  modest-folder-window.h  modest-header-window.c  modest-header-window.h  modest-hildon-find-toolbar.c  modest-hildon-find-toolbar.h  (+61 more)
tests/: Makefile.am  check_account-mgr.c  check_folder-transfer.c  check_modest-conf.c  check_modest-presets.c  check_modest-utils.c  check_text-utils.c  check_update-account.c  folder-transfer.c  provider-data-test.keyfile  update-account.c
(+427 files in other folders)
